Update to 1.20.2 + fixes